fix alignment

--- a/src/components/NewHomePage/VerticalsSection/VerticalsSection.css
+++ b/src/components/NewHomePage/VerticalsSection/VerticalsSection.css
@@ -1,4 +1,4 @@
-.verticals-section h2, .verticals-section h3, .verticals-section a, .verticals-section p {
+.verticals-section h2, .verticals-section h3, .verticals-section a {
   margin: 0px;
   padding: 0px;
 }
